--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,14 @@
 // Home Content
+.planet{
+  border-top: 1px solid rgb(187, 183, 183);
+  width:1000px;
+  margin-left: -10%;
+  display: flex;
+  justify-content: center;
+
+}
+
+
 
 .home {
   @media @mobile{
@@ -13,13 +23,15 @@
     p {
       padding:0 15px;
     }
+    .intro img{
+      width:800px;
+      @media @mobile{
+        width:100%;
+      }
+    
      //need to make line wide
   }
-  .intro img{
-    border-top: 2px solid rgb(146, 136, 136);
-    @media @mobile{
-      width:100%;
-    }
+  
   }
 
   .space-images {
