--- a/less/mixins.less
+++ b/less/mixins.less
@@ -18,7 +18,7 @@
  }
  
  .grayColor{
-    background-color: rgb(230, 222, 222);
+    background-color: rgb(252, 249, 249);
  }
  
 
