--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,8 @@
 
 .top-bar{
     .grayColor();
-    margin-top: 20px;
+    padding-top:20px;
+    margin-left: 20px;
     padding-bottom: 15px;
     flex-direction: column;
     flex-wrap: wrap;
